name:                photos
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/photos#readme
license:             BSD3
license-file:        LICENSE
author:              Example Author Name
maintainer:          example@example.com
copyright:           2010 Author Here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable photos
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:
      Data
    , PhotoStore
    , Authentication
  default-language:    Haskell2010
  build-depends:
      base >= 4.7 && < 5
    , aeson
    , bytestring
    , directory
    , either
    , extra
    , filepath
    , hflags
    , http-conduit
    , mtl
    , servant
    , servant-server
    , split
    , transformers
    , wai
    , wai-extra
    , warp
