name:                photos
version:             0.1.0.0
synopsis:            Photo organizer
description:         Please see README.md
homepage:            http://github.com/orbekk/photos#readme
license:             Apache
license-file:        LICENSE
author:              Kjetil Ørbekk
maintainer:          kjetil.orbekk@gmail.com
copyright:           2016 Kjetil Ørbekk
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable photos
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:
      Data
    , PhotoStore
    , Authentication
  default-language:    Haskell2010
  build-depends:
      base >= 4.7 && < 5
    , aeson
    , bytestring
    , directory
    , either
    , extra
    , filepath
    , hflags
    , http-conduit
    , mtl
    , servant
    , servant-server
    , split
    , transformers
    , wai
    , wai-extra
    , warp
